force-app/main/default/objects/SurveyScoreSettings__c/SurveyScoreSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Survey Score Settings</label>
</CustomObject>