force-app/main/default/objects/SurveyScoreSettings__c/fields/DefinedResponseWeight__c.field-meta.xml
<CustomField>
    <fullName>DefinedResponseWeight__c</fullName>
    <label>Defined Response Weight</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>