force-app/main/default/objects/SurveyScoreSettings__c/fields/JumpQuestionWeight__c.field-meta.xml
<CustomField>
    <fullName>JumpQuestionWeight__c</fullName>
    <label>Jump Question Weight</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>