force-app/main/default/objects/SurveyScoreSettings__c/fields/QuestionWeight__c.field-meta.xml
<CustomField>
    <fullName>QuestionWeight__c</fullName>
    <label>Question Weight</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>