force-app/main/default/objects/SurveyScoreSettings__c/fields/SurveyScoreThreshold__c.field-meta.xml
<CustomField>
    <fullName>SurveyScoreThreshold__c</fullName>
    <label>Survey Score Threshold</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>