force-app/main/default/objects/SurveyScoreSettings__c/fields/SurveyScoreWarning__c.field-meta.xml
<CustomField>
    <fullName>SurveyScoreWarning__c</fullName>
    <label>Survey Score Warning</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>